@@ -14,6 +14,9 @@ Some gimmick secret stuff
 Slightly reduced price upgrades
 Shift+click will construct max possible buildings.
 
+Unicorn Selection
+GM Catnip
+
 v 1.0.7.2 (4 mar)
 
 Changes by klusark:
